[project]
name = "ksentry"
version = "0.1.0"
description = "A high-performance repository gatekeeper for automated secret scanning and balanced code review distribution"
authors = [{ name = "BiltuDas1", email = "billionto@gmail.com" }]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["fastapi (>=0.128.0,<0.129.0)", "uvicorn (>=0.40.0,<0.41.0)", "httpx (>=0.28.1,<0.29.0)", "pyjwt (>=2.10.1,<3.0.0)", "cryptography (>=46.0.3,<47.0.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[dependency-groups]
dev = [
    "ruff (>=0.14.11,<0.15.0)",
    "python-dotenv (>=1.2.1,<2.0.0)"
]
